src/main/metadata-au/objects/Campaign_Package__c.object
<CustomObject>
    <description>Campaign: Combination of campaign offerings</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Packages</relationshipLabel>
        <relationshipName>Campaign_Packages_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Items__c</fullName>
        <label>Package Items</label>
        <summaryForeignKey>Package_Item__c.Package_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Campaign Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>